# python_reference

./: LICENSE  README.md  pyproject.toml
src/python_reference/: console.py
tests/: noxfile.py  test_console.py
