[tool.poetry]
name = "python_reference"
version = "0.1.0"
authors = ["lmenna <louismenna@yahoo.com>"]
description = "The reference Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lmenna/python_reference"
repository = "https://github.com/lmenna/python_reference"
keywords = ["reference"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"

[tool.poetry.scripts]
python-reference = "python_reference.console:main"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# pyproject.toml
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_reference"]

[tool.coverage.report]
show_missing = true
fail_under = 100